scripts/secure/13_calico_kubemsb1_ipblock.yaml
# 设置规则，现在指定ip可以访问
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubemsb1-ipblock
  namespace: kubemsb1
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
  ingress:
  - from: 
    - ipBlock:
        cidr: 10.244.0.0/16
        except: 
        - 10.244.3.0/24
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
        except:
        - 10.244.3.0/24
